
name:           elims-demo
version:        0.1.0.0
description:    Demo type theory with higher inductive-inductive types with propositional computation rules
homepage:       https://bitbucket.org/akaposi/elims/src/e6f6d807fda39ebabcd54d4d3e58065afe249469/haskell/elims-demo/?at=master

author:         Andr치s Kov치cs
maintainer:     puttamalac@gmail.com
copyright:      2018 Andr치s Kov치cs
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  default-language: Haskell2010
  exposed-modules: Impl, Presyntax, AgdaToHsUtil, Examples
  hs-source-dirs: .
  build-depends:
                base >=4.7 && <5,
                split, unordered-containers, megaparsec, mtl

executable hiit-defs
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , elims-demo
    , split, unordered-containers, megaparsec, mtl
  other-modules:
      Paths_elims_demo, Impl, Presyntax
  default-language: Haskell2010

source-repository head
  type: git
  location: https://bitbucket.org/akaposi/elims.git
